add the swagger documentation of forgetPassword method
